2009-06-06 Makefile dependencies updated
2009-06-05 Avoid a busy loop while sending very large replies against very fast links, this allows to be more responsive with other clients even under a KEY * against the loopback interface
2009-06-05 Kill the background saving process before performing SHUTDOWN to avoid races
2009-06-05 LREM now returns :0 for non existing keys
2009-06-05 added config.h for #ifdef business isolation, added fstat64 for Mac OS X
2009-06-04 macosx specific zmalloc.c, uses malloc_size function in order to avoid to waste memory and time to put an additional header
2009-06-04 DEBUG OBJECT implemented
2009-06-04 backtrace support removed: unreliable stack trace :(
2009-06-04 initial backtrace dumping on sigsegv/sigbus + debug command
2009-06-03 Python lib updated
2009-06-03 shareobjectspoolsize implemented in reds.conf, in order to control the pool size when object sharing is on
2009-05-30 Erlang client updated
2009-05-30 Python client library updated
2009-05-29 Redis-rb minor bool convertion fix
2009-05-29 ruby library client is not Redis-rb merged with RubyRedis "engine" by Brian McKinney
2009-05-28 __P completely removed from pqsort.c/h
2009-05-28 another minor fix for Solaris boxes
2009-05-28 minor fix for Solaris boxes
2009-05-28 minor fix for Solaris boxes
2009-05-27 maxmemory implemented
2009-05-26 Redis git version modified to 0.101 in order to distinguish that from the latest tar.gz via INFO ;)
2009-05-26 Redis 0.100 released
2009-05-26 client libraries synched in git
2009-05-26 ignore gcc warning about write() return code not checked. It is esplicitily this way since the "max number of clients reached" is a best-effort error
2009-05-26 max bytes of a received command enlarged from 1k to 16k
2009-05-26 RubyRedis: set TCP_NODELAY TCP socket option to to disable the neagle algorithm. Makes a huge difference under some OS, notably Linux
2009-05-25 maxclients implemented, see redis.conf for details